Generate all possible combinations of selected ranges

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "chalk": "^2.4.1",
+    "combos": "^0.2.0",
     "csv-writer": "^1.2.0",
+    "deepdash": "^1.5.1",
     "is-empty": "^1.2.0",
     "mathjs": "^5.2.3",
     "moment": "^2.22.2",
