Init base for futher version

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.18.0",
     "chalk": "^2.4.1",
     "combos": "^0.2.0",
+    "commander": "^2.19.0",
     "csv-writer": "^1.2.0",
     "flat": "^4.1.0",
     "marky": "^1.2.1",
