--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "table": "^5.1.0",
     "toml": "^2.3.3",
     "uniqid": "^5.0.3"
+  },
+  "devDependencies": {
+    "standard": "^12.0.1"
   }
 }
