--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "mathjs": "^5.2.3",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
+    "rxjs": "^6.4.0",
     "toml": "^2.3.3",
-    "uniqid": "^5.0.3"
+    "uniqid": "^5.0.3",
+    "ws": "^6.1.3"
   },
   "devDependencies": {
     "standard": "^12.0.1"
